--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ addopts = [
 filterwarnings = [
     "error::DeprecationWarning",
     "error::PendingDeprecationWarning",
-    "ignore:There is no current event loop:DeprecationWarning:asyncio", # TODO: remove when https://github.com/python/cpython/issues/100160 is fixed
+    "ignore:There is no current event loop:DeprecationWarning", # TODO: remove when https://github.com/python/cpython/issues/100160 is fixed
 ]
 
 [tool.coverage.run]
