--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,8 @@ jobs:
           name: run fast tests
           command: |
             make ci
-            codecov -e PYTHON
+
+      - bitcartcc/codecov
 
       - upload-results
 
