--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  bitcartcc: bitcartcc/bitcartcc-shared@1
+  bitcart: bitcart/bitcart-shared@2
 
 executors:
   main-executor:
@@ -73,12 +73,12 @@ jobs:
           command: |
             make ci
 
-      - bitcartcc/codecov
+      - bitcart/codecov
 
       - upload-results
 
   deploy:
-    executor: bitcartcc/docker-python
+    executor: bitcart/docker-python
     docker:
       - image: cimg/python:3.8
     steps:
@@ -105,7 +105,7 @@ workflows:
   version: 2
   test_and_deploy:
     jobs:
-      - bitcartcc/lint:
+      - bitcart/lint:
           name: lint
       - test:
           name: test-<< matrix.v >>
