--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,27 @@ target-version = "py39"
 line-length = 127
 
 [tool.ruff.lint]
-extend-select = ["F", "E", "I", "UP", "YTT", "B", "T10", "C", "SIM", "RUF100"]
+select = [
+    "F",
+    "E",
+    "I",
+    "UP",
+    "YTT",
+    "B",
+    "T10",
+    "C",
+    "SIM",
+    "RUF100",
+    "RET",
+    "A",
+    "S",
+    "ASYNC",
+]
+ignore = ["RET502", "RET503", "S104", "S507", "ASYNC110"]
+mccabe = { max-complexity = 12 }
+
+[tool.ruff.lint.per-file-ignores]
+'tests/*' = ["S"]
 
 [tool.mypy]
 warn_redundant_casts = true
