--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,15 +3,14 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.8"
+    python: "3.11"
+  jobs:
+    post_create_environment:
+      - pip install uv
+    post_install:
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH uv pip install -r docs/requirements.txt
 
 sphinx:
   configuration: docs/conf.py
 
 formats: all
-
-python:
-  install:
-    - method: pip
-      path: .
-    - requirements: docs/requirements.txt
