--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A library to help automate the creation of universal python libra
 readme = "README.md"
 license = "MIT"
 authors = [{ name = "MrNaif2018", email = "chuff184@gmail.com" }]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
@@ -17,11 +17,11 @@ classifiers = [
     "Topic :: Utilities",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
 ]
 keywords = [
     "async",
@@ -66,7 +66,7 @@ path = "universalasync/version.py"
 packages = ["universalasync"]
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 line-length = 127
 
 [tool.ruff.lint]
@@ -102,6 +102,7 @@ warn_return_any = true
 no_implicit_optional = true
 strict_optional = true
 ignore_missing_imports = true
+exclude = ["tests"]
 
 [tool.pytest.ini_options]
 addopts = ["--cov=universalasync", "--cov-report", "term-missing"]
